add create spending page and button

--- a/SDD_P02_Group1/Views/Spending/Index.cshtml
+++ b/SDD_P02_Group1/Views/Spending/Index.cshtml
@@ -5,6 +5,9 @@
 }
 
 <h4>Spendings for current week</h4>
+<p>
+    <a asp-controller="Spending" asp-action="Create">Add New Spending</a>
+</p>
 <br />
 
 <div class="table-responsive">
