--- a/SDD_P02_Group1/Views/Liability/Index.cshtml
+++ b/SDD_P02_Group1/Views/Liability/Index.cshtml
@@ -35,13 +35,34 @@
                        asp-route-id="@item.LiabilityID" style="padding-left: 1em;">Details</a> |
 
                     <form asp-action="Delete" asp-controller="Liability" asp-route-id="@item.LiabilityID" enctype="multipart/form-data" class="form-check-inline" id="assetDeleteForm">
-                        <a href="#" data-toggle="modal" data-target="#deleteAssetConfirmation">Delete</a>
+                        <a href="#" data-toggle="modal" data-target="#deleteLiabilityConfirmation">Delete</a>
                     </form>
                 </td>
             </tr>
         }
     </tbody>
 </table>
+
+<div class="modal fade" id="deleteLiabilityConfirmation" tabindex="-1" role="dialog" aria-labelledby="deleteLiabilityConfirmation" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Confirmation</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this liability?
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <input type="submit" value="Confirm" class="btn btn-danger" form="assetDeleteForm" />
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
     $(document).ready(function () {
