--- a/SDD_P02_Group1/Views/Home/Login.cshtml
+++ b/SDD_P02_Group1/Views/Home/Login.cshtml
@@ -11,14 +11,17 @@
                     <label for="txtEmail" class="control-label">Email Address</label>
                     <input type="email" class="form-control" name="txtEmail" id="txtEmail" required />
                 </div>
-
                 <div class="form-group">
                     <label for="txtPassword" class="control-label">Password</label>
                     <input type="password" class="form-control" name="txtPassword" id="txtPassword" required />
                 </div>
+                <div class="d-inline-block form-group">
+                    <label>Remember Me</label>
+                    <input type="checkbox" id="rememberMe" name="rememberMe" onclick="changeToEdit"/>                             
+                </div>
                 <div class="form-group text-center" style="margin-top: 2rem">
                     <a asp-controller="Home" asp-action="Index" class="btn btn-secondary">Go Back</a>&nbsp;
-                    <input type="submit" id="btnLogin" class="btn btn-primary" value="Login" style="width:100px" />
+                    <input type="submit" id="btnLogin" class="btn btn-primary" value="Login" style="width:100px"/>
                 </div>
                 <div class="text-center">
                     <span class="text-danger">@TempData["LoginErrorMessage"]</span>
@@ -58,4 +61,5 @@
             </div>
         </div>
     </div>
+</div>
 </div>
