--- a/SDD_P02_Group1/Views/Spending/Index.cshtml
+++ b/SDD_P02_Group1/Views/Spending/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "View Spending";
 }
+<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 
 <h4>Spendings for current week</h4>
 <p>
@@ -186,14 +187,30 @@
             }
             else
             {
-                <td>@String.Format("{0:n2}{1}", Model.weekdiff.TotalSpendingDifferencePercentage,"%")</td>
+                <td>@String.Format("{0:n2}{1}", Model.weekdiff.TotalSpendingDifferencePercentage, "%")</td>
             }
         </tr>
     </tbody>
 </table>
 <br />
 
-<h4>Spendings By Category</h4>
+<h4>Spendings By Month</h4>
+
+<div class="input-group rounded">
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" style="background-color:#F69782">All</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Jan">Jan</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Feb">Feb</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Mar">Mar</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Apr">Apr</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="May">May</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Jun">Jun</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Jul">Jul</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Aug">Aug</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Sep">Sep</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Oct">Oct</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Nov">Nov</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Dec">Dec</button>
+</div>
 
 <div class="table-responsive">
     <table id="ViewSpending" class="table table-striped">
@@ -204,10 +221,10 @@
                 <th>Amount Spent</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id="SpendingMonth">
             @foreach (var item in Model.spendrecord)
             {
-                <tr>
+                <tr class="@item.DateOfTransaction.ToString("MMM")">
                     <td>@item.DateOfTransaction.ToString("dd MMM yyyy")</td>
                     <td>@item.CategoryOfSpending</td>
                     <td>@String.Format("{0}{1:n2}", "$", item.AmountSpent)</td>
@@ -219,6 +236,13 @@
 <br />
 
 <h4>Past Spending Records by Week</h4>
+
+<div style="width: 300px" class="input-group rounded">
+    <input type="search" class="form-control rounded" placeholder="Search" id="RecordSearch" />
+    <span class="input-group-text border-0">
+        <i class='bx bx-search'></i>
+    </span>
+</div>
 
 @if (Model.past.Count > 0)
 {
@@ -242,7 +266,7 @@
                 {
                     if (item.FirstDateOfWeek != Model.current.FirstDateOfWeek)
                     {
-                        <tr>
+                        <tr class="RecordSearch">
                             <td>@item.FirstDateOfWeek.ToString("dd MMM yyyy")</td>
                             @if (item.MonSpending is null)
                             {
@@ -315,3 +339,48 @@
         </table>
     </div>
 }
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+    $(function filterDate($) {
+        var buttons = $('button');
+        buttons.click(function () {
+            buttons.css('background-color', '#FFFFFF');
+            $(this).css('background-color', '#F69782');
+        });
+        var filter;
+        $('.filter').click(function () {
+            if (filter == this.id) {
+                filter = undefined;
+            } else if (this.id == '') {
+                $('#SpendingMonth tr').show();
+                filter = undefined;
+            } else {
+                $('#SpendingMonth tr:not(.' + this.id + ')').hide();
+                $('#SpendingMonth tr.' + this.id).show();
+                filter = this.id;
+            }
+        });
+    });
+
+    $(document).ready(function () {
+        function Contains(text_one, text_two) {
+            if (text_one.indexOf(text_two) != -1)
+                return true;
+        }
+        $("#RecordSearch").keyup(function () {
+            var searchText = $("#RecordSearch").val().toLowerCase();
+
+            $(".RecordSearch").each(function () {
+                if (!Contains($(this).text().toLowerCase(), searchText)) {
+                    $(this).hide();
+                }
+                else {
+                    $(this).show();
+                }
+
+            });
+        });
+
+    });
+</script>
