--- a/SDD_P02_Group1/Views/Spending/Index.cshtml
+++ b/SDD_P02_Group1/Views/Spending/Index.cshtml
@@ -198,18 +198,18 @@
 
 <div class="input-group rounded">
     <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" style="background-color:#F69782">All</button>
-    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Jan">Jan</button>
-    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Feb">Feb</button>
-    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Mar">Mar</button>
-    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Apr">Apr</button>
-    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="May">May</button>
-    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Jun">Jun</button>
-    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Jul">Jul</button>
-    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Aug">Aug</button>
-    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Sep">Sep</button>
-    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Oct">Oct</button>
-    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Nov">Nov</button>
-    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Dec">Dec</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Jan" style="margin: 5px;">Jan</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Feb" style="margin: 5px;">Feb</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Mar" style="margin: 5px;">Mar</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Apr" style="margin: 5px;">Apr</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="May" style="margin: 5px;" >May</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Jun" style="margin: 5px;">Jun</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Jul" style="margin: 5px;">Jul</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Aug" style="margin: 5px;">Aug</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Sep" style="margin: 5px;">Sep</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Oct" style="margin: 5px;">Oct</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Nov" style="margin: 5px;">Nov</button>
+    <button type="button" class="btn btn-default btn-lg filter" onclick="filterDate()" id="Dec" style="margin: 5px;">Dec</button>
 </div>
 
 <div class="table-responsive">
