--- a/SDD_P02_Group1/Views/Home/Login.cshtml
+++ b/SDD_P02_Group1/Views/Home/Login.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model SDD_P02_Group1.Models.Checkbox
+
+@{
     ViewData["Title"] = "Login";
 }
 
@@ -16,12 +18,12 @@
                     <input type="password" class="form-control" name="txtPassword" id="txtPassword" required />
                 </div>
                 <div class="d-inline-block form-group">
-                    <input type="checkbox" id="rememberMe" name="rememberMe" onclick="changeToEdit" />
-                    <label>Remember Me</label>
+                    <input asp-for="remember" />
+                    <label asp-for="remember"></label>
                 </div>
                 <div class="form-group text-center" style="margin-top: 2rem">
                     <a asp-controller="Home" asp-action="Index" class="btn btn-secondary">Go Back</a>&nbsp;
-                    <input type="submit" id="btnLogin" class="btn btn-primary" value="Login" style="width:100px"/>
+                    <input type="submit" id="btnLogin" class="btn btn-primary" value="Login" style="width:100px" />
                 </div>
                 <div class="text-center">
                     <span class="text-danger">@TempData["LoginErrorMessage"]</span>
