--- a/SDD_P02_Group1/Views/Asset/Edit.cshtml
+++ b/SDD_P02_Group1/Views/Asset/Edit.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
+<h1>Edit</h1>
+
+<h4>Assets</h4>
+<hr />
 <div>
     <div class="col-md-4">
         <form asp-action="Edit">
@@ -47,44 +51,44 @@
         </form>
     </div>
 
-@*    <h4>Asset Details</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AssetName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AssetName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.InitialValue)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.InitialValue)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CurrentValue)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CurrentValue)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.PredictedValue)
-        </dt>
-        @if (ViewData.ContainsKey("pvalue"))
-        {
+    @*    <h4>Asset Details</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.AssetName)
+            </dt>
             <dd class="col-sm-10">
-                @ViewData["pvalue"]
+                @Html.DisplayFor(model => model.AssetName)
             </dd>
-        }
-        else
-        {
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.InitialValue)
+            </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.PredictedValue)
+                @Html.DisplayFor(model => model.InitialValue)
             </dd>
-        }
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.CurrentValue)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.CurrentValue)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.PredictedValue)
+            </dt>
+            @if (ViewData.ContainsKey("pvalue"))
+            {
+                <dd class="col-sm-10">
+                    @ViewData["pvalue"]
+                </dd>
+            }
+            else
+            {
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.PredictedValue)
+                </dd>
+            }
 
-    </dl>*@
+        </dl>*@
 </div>
 
 <script type="text/javascript">
